finished new sp imp wiz

--- a/olca-app/plugin.xml
+++ b/olca-app/plugin.xml
@@ -780,20 +780,12 @@
             id="wizard.import.json"
             name="Linked Data (JSON-LD)">
       </wizard>
-      <wizard
-         category="import.category.file"
-       class="org.openlca.app.wizards.io.SimaProCsvImportWizard"
-       icon="icons/simapro.png"
-       id="wizard.import.csv"
-       name="SimaPro CSV">
-       <description>Import SimaPro CSV files.</description>
-     </wizard>
       <wizard category="import.category.file"
-       class="org.openlca.app.wizards.io.SimaProCsvImportWizard2"
+       class="org.openlca.app.wizards.io.SimaProCsvImportWizard"
        icon="icons/simapro.png"
        id="wizard.import.simapro.csv"
        name="SimaPro CSV">
-       <description>Import SimaPro CSV files.</description>
+       <description>Import SimaPro CSV files</description>
      </wizard>
      <wizard
           class="org.openlca.app.wizards.io.GeoJsonImportWizard"
