--- a/olca-app/build.properties
+++ b/olca-app/build.properties
@@ -17,4 +17,5 @@ bin.includes = plugin.xml,\
                html/,\
                plugin_customization.ini,\
                db_templates/,\
-               libs/
+               libs/,\
+               libs/swt-material-icons-1.0.0.jar
