--- a/olca-app/.classpath
+++ b/olca-app/.classpath
@@ -5,6 +5,7 @@
 	<classpathentry exported="true" kind="lib" path="libs/annotations-4.1.1.4.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/annotations-api-6.0.53.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/aopalliance-repackaged-3.0.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/checker-qual-3.12.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/commons-beanutils-1.9.4.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/commons-codec-1.13.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/commons-collections-3.2.2.jar"/>
@@ -17,7 +18,8 @@
 	<classpathentry exported="true" kind="lib" path="libs/commons-math3-3.6.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/curvesapi-1.06.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/derby-10.14.2.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/error_prone_annotations-2.5.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/error_prone_annotations-2.7.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/failureaccess-1.0.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/grpc-api-1.41.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/grpc-context-1.41.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/grpc-core-1.41.0.jar"/>
@@ -25,12 +27,13 @@
 	<classpathentry exported="true" kind="lib" path="libs/grpc-protobuf-1.41.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/grpc-protobuf-lite-1.41.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/grpc-stub-1.41.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/gson-2.8.6.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/guava-21.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/gson-2.8.9.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/guava-31.0.1-jre.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/HikariCP-4.0.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/hk2-api-3.0.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/hk2-locator-3.0.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/hk2-utils-3.0.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/j2objc-annotations-1.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/jackson-core-2.12.5.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/jakarta.activation-2.0.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/jakarta.annotation-api-2.0.0.jar"/>
@@ -42,7 +45,7 @@
 	<classpathentry exported="true" kind="lib" path="libs/javassist-3.25.0-GA.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/jaxb-core-3.0.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/jaxb-impl-3.0.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/jcl-over-slf4j-1.7.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/jcl-over-slf4j-1.7.35.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/jersey-client-1.19.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/jersey-client-3.0.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/jersey-common-3.0.2.jar"/>
@@ -52,8 +55,9 @@
 	<classpathentry exported="true" kind="lib" path="libs/jersey-media-multipart-3.0.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/jsr305-3.0.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/jsr311-api-1.1.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/jts-core-1.16.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/jts-core-1.18.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/jython-standalone-2.7.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/listenablefuture-9999.0-empty-to-avoid-conflict-with-guava.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/log4j-1.2.17.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/mapdb-2.0-beta7.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/mariadb-java-client-2.7.2.jar"/>
@@ -87,10 +91,8 @@
 	<classpathentry exported="true" kind="lib" path="libs/protobuf-java-3.18.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/protobuf-java-util-3.18.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/proto-google-common-protos-2.0.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/slf4j-api-1.7.25.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/slf4j-log4j12-1.7.25.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/slf4j-api-1.7.35.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/SparseBitSet-1.2.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/super-csv-2.4.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/trove4j-3.0.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/util.concurrent.blockingMap-0.91.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/xmlbeans-3.1.0.jar"/>
