--- a/olca-app/pom.xml
+++ b/olca-app/pom.xml
@@ -13,10 +13,12 @@
 
 	<repositories>
 		<repository>
-			<id>osgeo</id>
-			<name>Open Source Geospatial Foundation Repository</name>
-			<url>http://download.osgeo.org/webdav/geotools/</url>
-		</repository>
+    		<id>osgeo</id>
+    		<name>OSGeo Release Repository</name>
+    		<url>https://repo.osgeo.org/repository/release/</url>
+    		<snapshots><enabled>false</enabled></snapshots>
+    		<releases><enabled>true</enabled></releases>
+  		</repository>
 	</repositories>
 
 	<dependencies>
