--- a/olca-app/.classpath
+++ b/olca-app/.classpath
@@ -58,7 +58,8 @@
 	<classpathentry exported="true" kind="lib" path="libs/jts-core-1.18.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/jython-standalone-2.7.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/listenablefuture-9999.0-empty-to-avoid-conflict-with-guava.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/log4j-1.2.17.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/logback-classic-1.2.11.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/logback-core-1.2.11.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/mapdb-2.0-beta7.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/mariadb-java-client-2.7.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/mimepull-1.9.13.jar"/>
@@ -91,7 +92,7 @@
 	<classpathentry exported="true" kind="lib" path="libs/protobuf-java-3.18.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/protobuf-java-util-3.18.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/proto-google-common-protos-2.0.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/slf4j-api-1.7.35.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/slf4j-api-1.7.36.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/SparseBitSet-1.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/trove4j-3.0.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/util.concurrent.blockingMap-0.91.jar"/>
