cleanup the mac resources

--- a/olca-app-build/templates/openLCA_mac.ini
+++ b/olca-app-build/templates/openLCA_mac.ini
@@ -1,7 +1,7 @@
 -startup
-../../plugins/{launcher_jar}
+../Eclipse/plugins/{launcher_jar}
 --launcher.library
-../../plugins/{launcher_lib}
+../Eclipse/plugins/{launcher_lib}
 -nl
 en
 -data
@@ -9,6 +9,8 @@ en
 -vm
 ../../jre/Contents/Home/lib/jli/libjli.dylib
 -vmargs
--Xmx35848M
+-Xmx3584M
+-Dpython.console.encoding=UTF-8
+--add-modules=ALL-SYSTEM
 -XstartOnFirstThread
 -Dorg.eclipse.swt.internal.carbon.smallFonts
