display library dependencies in info-page

--- a/olca-app/plugin.xml
+++ b/olca-app/plugin.xml
@@ -370,7 +370,7 @@
 		<editor
 			class="org.openlca.app.tools.libraries.LibraryInfoPage"
 			default="false"
-			icon="icons/model/flow.png"
+			icon="icons/library.png"
 			id="LibraryInfoPage"
 			name="Library">
 		</editor>
