--- a/olca-app/.classpath
+++ b/olca-app/.classpath
@@ -3,7 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry exported="true" kind="lib" path="libs/animal-sniffer-annotations-1.19.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/annotations-4.1.1.4.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/annotations-api-6.0.53.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/aopalliance-repackaged-3.0.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/checker-qual-3.12.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/commons-beanutils-1.9.4.jar"/>
@@ -43,6 +42,7 @@
 	<classpathentry exported="true" kind="lib" path="libs/jakarta.xml.bind-api-3.0.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/JavaEWAH-1.1.13.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/javassist-3.25.0-GA.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/javax.annotation-api-1.3.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/jaxb-core-3.0.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/jaxb-impl-3.0.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/jcl-over-slf4j-1.7.35.jar"/>
@@ -77,7 +77,7 @@
 	<classpathentry exported="true" kind="lib" path="libs/olca-native-0.0.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/olca-proto-1.1.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/olca-proto-io-2.0.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/olca-simapro-csv-3.0.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/olca-simapro-csv-3.0.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/org.eclipse.jgit-6.0.0.202111291000-r.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/org.eclipse.persistence.asm-9.1.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/org.eclipse.persistence.core-3.0.2.jar"/>
