--- a/olca-app/plugin.xml
+++ b/olca-app/plugin.xml
@@ -251,7 +251,7 @@
 			name="Log file">
 		</editor>
 		<editor
-			class="org.openlca.app.editors.graphical.GraphEditor"
+			class="org.openlca.app.editors.graph.GraphEditor"
 			default="false"
 			icon="icons/model/product_system.png"
 			id="editors.productsystem.graphical"
