updated library deps

--- a/olca-app/.classpath
+++ b/olca-app/.classpath
@@ -16,7 +16,8 @@
 	<classpathentry exported="true" kind="lib" path="libs/commons-logging-1.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/commons-math3-3.6.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/curvesapi-1.06.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/derby-10.14.2.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/derby-10.15.2.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/derbyshared-10.15.2.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/error_prone_annotations-2.11.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/failureaccess-1.0.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/grpc-api-1.46.0.jar"/>
@@ -28,7 +29,7 @@
 	<classpathentry exported="true" kind="lib" path="libs/grpc-stub-1.46.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/gson-2.9.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/guava-31.1-jre.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/HikariCP-4.0.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/HikariCP-5.0.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/hk2-api-3.0.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/hk2-locator-3.0.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/hk2-utils-3.0.1.jar"/>
