Adding AddExchange and AddProcess commands and actions.

--- a/olca-app/plugin.xml
+++ b/olca-app/plugin.xml
@@ -254,8 +254,9 @@
 			class="org.openlca.app.editors.graph.GraphEditor"
 			default="false"
 			icon="icons/model/product_system.png"
-			id="editors.productsystem.graphical"
-			name="Product system graphical editor">
+			id="editors.graphical"
+			contributorClass="org.openlca.app.editors.graph.actions.GraphActionBarContributor"
+			name="Graphical editor">
 		</editor>
 		<editor
 			id="SearchPage"
