--- a/olca-app/.editorconfig
+++ b/olca-app/.editorconfig
@@ -5,6 +5,7 @@ charset = utf-8
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-[*.{java, xml}]
+[*.{java,xml}]
 indent_style = tab
 indent_size = 2
+ij_continuation_indent_size = 4
