updated target platform

--- a/olca-app/plugin.xml
+++ b/olca-app/plugin.xml
@@ -617,6 +617,10 @@
 				name="startupMessageRect"
 				value="7,525,445,20">
 			</property>
+   <property
+         name="preferenceCustomization"
+         value="plugin_customization.ini">
+   </property>
 		</product>
 	</extension>
 	<extension
