--- a/olca-app/plugin.xml
+++ b/olca-app/plugin.xml
@@ -610,6 +610,14 @@
 				value="0,437,586,5">
 			</property>
    <property
+         name="startupForegroundColor"
+         value="000000">
+   </property>
+   <property
+         name="startupMessageRect"
+         value="7,525,445,20">
+   </property>
+   <property
          name="preferenceCustomization"
          value="plugin_customization.ini">
    </property>
