Add MultiPageActionBarContributor for the GraphEditor and the SankeyEditor.  - A MultiPageEditorActionBarContributor allows to switch SubActionBars when switching from one page to another in the MultiPageEditor.  - The BasicActionBarContributor is the action bar contributor under the SubActionBars that can be extended by specific editors.

--- a/olca-app/plugin.xml
+++ b/olca-app/plugin.xml
@@ -176,7 +176,7 @@
 			icon="icons/model/product_system.png"
 			id="editors.productsystem"
 			name="%ProductSystemEditor"
-			contributorClass="org.openlca.app.editors.systems.ProductSystemActions">
+			contributorClass="org.openlca.app.editors.systems.ProductSystemBarContributor">
 		</editor>
 		<editor
 			class="org.openlca.app.editors.social.SocialIndicatorEditor"
@@ -216,7 +216,7 @@
 		<!-- result views -->
 		<editor
 			class="org.openlca.app.results.ResultEditor"
-			contributorClass="org.openlca.app.results.ResultEditorActions"
+			contributorClass="org.openlca.app.results.ResultsBarContributor"
 			default="false"
 			icon="icons/analysis.png"
 			id="editors.analyze"
