--- a/olca-app/plugin.xml
+++ b/olca-app/plugin.xml
@@ -812,7 +812,7 @@
 		</wizard>
 		<wizard
 			category="import.category.file"
-			class="org.openlca.app.wizards.io.ExcelImportWizard2"
+			class="org.openlca.app.wizards.io.ExcelImportWizard"
 			icon="icons/file/excel.png"
 			id="wizard.import.excel"
 			name="Excel">
