--- a/olca-app/build.properties
+++ b/olca-app/build.properties
@@ -17,5 +17,4 @@ bin.includes = plugin.xml,\
                html/,\
                plugin_customization.ini,\
                db_templates/,\
-               libs/,\
-               libs/olca-process-xls-2.0.0.jar
+               libs/
