--- a/olca-app/build.properties
+++ b/olca-app/build.properties
@@ -9,13 +9,12 @@ p2.director.profile = openlca
 bin.includes = plugin.xml,\
                META-INF/,\
                .,\
-               OSGI-INF/,\
-               OSGI-INF/l10n/,\
                icons/,\
                splash.bmp,\
                openLCA.product,\
                html/,\
                plugin_customization.ini,\
                db_templates/,\
+               css/,\
                libs/,\
-               css/
+               OSGI-INF/
