Update Mac app bundle creation.  - get version from openLCA.product  - create a PlugIns directory in Contents for the JRE.

--- a/olca-app-build/templates/openLCA_mac.ini
+++ b/olca-app-build/templates/openLCA_mac.ini
@@ -9,7 +9,7 @@ en
 default
 @noDefault
 -vm
-../../jre/Contents/Home/lib/libjli.dylib
+../PlugIns/jre.plugin/Contents/Home/lib/libjli.dylib
 -vmargs
 -Xmx3584M
 -Dpython.console.encoding=UTF-8
