--- a/olca-app-build/templates/Info.plist
+++ b/olca-app-build/templates/Info.plist
@@ -3,9 +3,9 @@
 
 	<dict>
 		<key>CFBundleExecutable</key>
-		<string>openLCA</string>
+		<string>eclipse</string>
 		<key>CFBundleGetInfoString</key>
-		<string>openLCA 2.0.0.beta3</string>
+		<string>openLCA _VERSION_</string>
 		<key>CFBundleIconFile</key>
 		<string>logo.icns</string>
 		<key>CFBundleIdentifier</key>
@@ -17,11 +17,11 @@
 		<key>CFBundlePackageType</key>
 		<string>APPL</string>
 		<key>CFBundleShortVersionString</key>
-		<string>1.10</string>
+		<string>_VERSION_</string>
 		<key>CFBundleSignature</key>
 		<string>????</string>
 		<key>CFBundleVersion</key>
-		<string>1.10</string>
+		<string>_VERSION_</string>
 		<key>NSHighResolutionCapable</key>
 		<true />
 		<key>CFBundleDevelopmentRegion</key>
