updated Jython to 2.7.3
but we get still bugs with IndirectSet etc.

--- a/olca-app/build.properties
+++ b/olca-app/build.properties
@@ -16,5 +16,5 @@ bin.includes = plugin.xml,\
                plugin_customization.ini,\
                db_templates/,\
                css/,\
-               libs/,\
-               OSGI-INF/
+               OSGI-INF/,\
+               libs/
