Create a Mac distibution script:  - creation of a script to distribute the Mac app independently:   - sign every framework, library and plugin,   - sign every framework and library within JAR files,   - sign the app bundle,   - package the app in a DMG and notarize it,   - staple the app freshly notarized,   - create a new DMG to distribute the app,   - embellish the DMG with a background and the /Application alias.  - adapt the `package.py` script to make the app notarizable,  - rename the `openLCA.app/Contents/MacOs/` executable to openLCA.

--- a/olca-app-build/templates/openLCA_mac.ini
+++ b/olca-app-build/templates/openLCA_mac.ini
@@ -9,7 +9,7 @@ en
 default
 @noDefault
 -vm
-../PlugIns/jre.plugin/Contents/Home/lib/libjli.dylib
+../Eclipse/jre/Contents/Home/lib/libjli.dylib
 -vmargs
 -Xmx3584M
 -Dpython.console.encoding=UTF-8
