--- a/olca-app-build/templates/Info.plist
+++ b/olca-app-build/templates/Info.plist
@@ -1,38 +1,40 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no" ?>
+<?xml version="1.0" encoding="UTF-8" standalone = "no" ?>
 <plist version="1.0">
 
 	<dict>
 		<key>CFBundleExecutable</key>
-		<string>eclipse</string>
+            <string>openLCA</string>
 		<key>CFBundleGetInfoString</key>
-		<string>openLCA _VERSION_</string>
+            <string>The open source Life Cycle and Sustainability Assessment software</string>
+        <key>LSApplicationCategoryType</key>
+           <string>public.app-category.utilities</string>
 		<key>CFBundleIconFile</key>
-		<string>logo.icns</string>
+            <string>logo.icns</string>
 		<key>CFBundleIdentifier</key>
-		<string>org.openlca.app</string>
+            <string>org.openlca.app</string>
 		<key>CFBundleInfoDictionaryVersion</key>
-		<string>6.0</string>
+            <string>6.0</string>
 		<key>CFBundleName</key>
-		<string>openLCA</string>
+            <string>openLCA</string>
 		<key>CFBundlePackageType</key>
-		<string>APPL</string>
+            <string>APPL</string>
 		<key>CFBundleShortVersionString</key>
-		<string>_VERSION_</string>
+            <string>_VERSION_</string>
 		<key>CFBundleSignature</key>
-		<string>????</string>
+            <string>????</string>
 		<key>CFBundleVersion</key>
-		<string>_VERSION_</string>
+            <string>_VERSION_</string>
 		<key>NSHighResolutionCapable</key>
-		<true />
+            <true />
 		<key>CFBundleDevelopmentRegion</key>
-		<string>English</string>
+            <string>English</string>
 		<key>Eclipse</key>
-		<array>
-			<string>-keyring</string>
-			<string>~/.eclipse_keyring</string>
-		</array>
+            <array>
+                <string>-keyring</string>
+                <string>~/.eclipse_keyring</string>
+            </array>
 		<key>CFBundleDisplayName</key>
-		<string>openLCA</string>
+            <string>openLCA</string>
 	</dict>
 
 </plist>
