--- a/olca-app-html/package.json
+++ b/olca-app-html/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "copy-webpack-plugin": "^11.0.0",
+    "prettier": "^2.8.8",
     "ts-loader": "^9.4.2",
     "typescript": "^4.9.5",
     "webpack": "^5.76.0",
