Add a Third-party licences page.

--- a/olca-app/build.properties
+++ b/olca-app/build.properties
@@ -17,4 +17,5 @@ bin.includes = plugin.xml,\
                db_templates/,\
                css/,\
                OSGI-INF/,\
-               libs/
+               libs/,\
+               about.html
