--- a/olca-app/plugin.xml
+++ b/olca-app/plugin.xml
@@ -471,7 +471,7 @@
 			</property>
 			<property
 					name="aboutImage"
-					value="icons/about.png">
+					value="icons/logo/about.png">
 			</property>
 			<property
 					name="appName"
@@ -494,6 +494,10 @@
 			<property
 					name="startupMessageRect"
 					value="7,525,445,20">
+			</property>
+			<property
+					name="preferenceCustomization"
+					value="plugin_customization.ini">
 			</property>
 		</product>
 	</extension>
