--- a/olca-app/pom.xml
+++ b/olca-app/pom.xml
@@ -30,6 +30,12 @@
 
 		<dependency>
 			<groupId>org.openlca</groupId>
+			<artifactId>olca-license</artifactId>
+			<version>0.0.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.openlca</groupId>
 			<artifactId>olca-proto-io</artifactId>
 			<version>${project.version}</version>
 		</dependency>
