--- a/olca-app/.classpath
+++ b/olca-app/.classpath
@@ -1,9 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry exported="true" kind="lib" path="libs/olca-simapro-csv-3.0.5.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/jython-standalone-2.7.3.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/org.eclipse.jgit-6.4.0.202211300538-r.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/animal-sniffer-annotations-1.21.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/annotations-4.1.1.4.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/aopalliance-repackaged-3.0.1.jar"/>
@@ -60,6 +57,7 @@
 	<classpathentry exported="true" kind="lib" path="libs/jsr305-3.0.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/jsr311-api-1.1.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/jts-core-1.19.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/jython-standalone-2.7.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/listenablefuture-9999.0-empty-to-avoid-conflict-with-guava.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/logback-classic-1.2.11.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/logback-core-1.2.11.jar"/>
@@ -67,19 +65,21 @@
 	<classpathentry exported="true" kind="lib" path="libs/mariadb-java-client-2.7.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/mimepull-1.9.13.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/npy-0.0.3.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/olca-core-2.0.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/olca-core-2.0.1-SNAPSHOT.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/olca-ecospold-1-2.0.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/olca-ecospold-2-2.0.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/olca-formula-2.0.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/olca-git-2.0.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/olca-git-2.0.1-SNAPSHOT.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/olca-grpc-2.0.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/olca-ilcd-2.0.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/olca-io-2.0.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/olca-ipc-2.0.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/olca-io-2.0.1-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/olca-ipc-2.0.1-SNAPSHOT.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/olca-native-0.0.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/olca-process-xls-2.0.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/olca-proto-2.0.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/olca-proto-io-2.0.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/olca-proto-io-2.0.1-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/olca-simapro-csv-3.0.5.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/org.eclipse.jgit-6.4.0.202211300538-r.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/org.eclipse.persistence.asm-9.3.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/org.eclipse.persistence.core-3.0.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/org.eclipse.persistence.jpa.jpql-3.0.3.jar"/>
