--- a/olca-app/pom.xml
+++ b/olca-app/pom.xml
@@ -2,34 +2,17 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+
 	<groupId>org.openlca</groupId>
 	<artifactId>olca-deps</artifactId>
-	<version>2.0.0</version>
+	<version>2.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<dependencies>
 
 		<dependency>
 			<groupId>org.openlca</groupId>
-			<artifactId>olca-formula</artifactId>
-			<version>${project.version}</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.openlca</groupId>
 			<artifactId>olca-core</artifactId>
-			<version>${project.version}</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.openlca</groupId>
-			<artifactId>olca-ecospold-1</artifactId>
-			<version>${project.version}</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.openlca</groupId>
-			<artifactId>olca-ilcd</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 
@@ -56,11 +39,11 @@
 			<artifactId>olca-git</artifactId>
 			<version>${project.version}</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.openlca</groupId>
 			<artifactId>olca-process-xls</artifactId>
-			<version>${project.version}</version>
+			<version>2.0.0</version>
 		</dependency>
 
 		<dependency>
