--- a/olca-app/plugin.xml
+++ b/olca-app/plugin.xml
@@ -467,7 +467,7 @@
 			</property>
 			<property
          name="aboutText"
-         value="openLCA 2.0.0&#x0A;&#x0A;Copyright (c) 2007 - 2023 GreenDelta. All rights reserved.&#x0A;Visit http://openlca.org and http://greendelta.com&#x0A;&#x0A;This product includes software developed in the openLCA&#x0A;project and other open source software.">
+         value="openLCA 2.0.2.SNAPSHOT&#x0A;&#x0A;Copyright (c) 2007 - 2023 GreenDelta. All rights reserved.&#x0A;Visit http://openlca.org and http://greendelta.com&#x0A;&#x0A;This product includes software developed in the openLCA&#x0A;project and other open source software.">
 			</property>
 			<property
 					name="aboutImage"
