--- a/olca-app/plugin.xml
+++ b/olca-app/plugin.xml
@@ -466,8 +466,8 @@
 					value="icons/logo/16_32bit.png,icons/logo/32_32bit.png,icons/logo/48_32bit.png,icons/logo/64.png,icons/logo/128.png">
 			</property>
 			<property
-         name="aboutText"
-         value="openLCA 2.0.3&#x0D;&#x0A;&#x0D;&#x0A;Copyright (c) 2007 - 2023 GreenDelta. All rights reserved.&#x0D;&#x0A;Visit http://openlca.org and http://greendelta.com&#x0D;&#x0A;&#x0D;&#x0A;This product includes software developed in the openLCA&#x0D;&#x0A;project and other open source software.">
+					name="aboutText"
+					value="openLCA 2.0.3&#x0D;&#x0A;&#x0D;&#x0A;Copyright (c) 2007 - 2023 GreenDelta. All rights reserved.&#x0D;&#x0A;Visit http://openlca.org and http://greendelta.com&#x0D;&#x0A;&#x0D;&#x0A;This product includes software developed in the openLCA&#x0D;&#x0A;project and other open source software.">
 			</property>
 			<property
 					name="aboutImage"
@@ -495,10 +495,10 @@
 					name="startupMessageRect"
 					value="7,525,445,20">
 			</property>
-   <property
-         name="preferenceCustomization"
-         value="plugin_customization.ini">
-   </property>
+			<property
+					name="preferenceCustomization"
+					value="plugin_customization.ini">
+			</property>
 		</product>
 	</extension>
 
@@ -832,11 +832,13 @@
 				Export LCIA methods to a SimaPro CSV file
 			</description>
 		</wizard>
+
 		<wizard
-			category="export.category.excel"
-			id="org.openlca.app.wizards.io.OneClickExportWizard"
-			class="org.openlca.app.wizards.io.OneClickExportWizard"
-			name="One Click LCA - Excel template">
+				category="export.category.excel"
+				id="org.openlca.app.wizards.io.OneClickExportWizard"
+				class="org.openlca.app.wizards.io.OneClickExportWizard"
+				name="One Click LCA - Excel template (experimental)"
+				icon="icons/immutable/oneclick16.png">
 			<description>
 				Exports processes into the One Click LCA Excel template
 			</description>
