--- a/olca-app/plugin.xml
+++ b/olca-app/plugin.xml
@@ -275,6 +275,13 @@
 				name="Validation result">
 		</editor>
 
+		<editor
+				class="org.openlca.app.tools.soda.SodaClientTool"
+				default="false"
+				id="SodaClientTool"
+				name="soda4LCA client">
+		</editor>
+
 	</extension>
 
 	<extension
@@ -467,7 +474,7 @@
 			</property>
 			<property
          name="aboutText"
-         value="openLCA 2.0.4&#x0A;&#x0A;Copyright (c) 2007 - 2023 GreenDelta. All rights reserved.&#x0A;Visit http://openlca.org and http://greendelta.com&#x0A;&#x0A;This product includes software developed in the openLCA&#x0A;project and other open source software.">
+         value="openLCA 2.0.5&#x0A;&#x0A;Copyright (c) 2007 - 2024 GreenDelta. All rights reserved.&#x0A;Visit http://openlca.org and http://greendelta.com&#x0A;&#x0A;This product includes software developed in the openLCA&#x0A;project and other open source software.">
 			</property>
 			<property
 					name="aboutImage"
@@ -495,6 +502,10 @@
 					name="startupMessageRect"
 					value="7,525,445,20">
 			</property>
+   <property
+         name="preferenceCustomization"
+         value="plugin_customization.ini">
+   </property>
 		</product>
 	</extension>
 
