--- a/olca-app/pom.xml
+++ b/olca-app/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>org.openlca</groupId>
 	<artifactId>olca-deps</artifactId>
-	<version>2.1.0</version>
+	<version>2.1.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<dependencies>
