--- a/olca-app/pom.xml
+++ b/olca-app/pom.xml
@@ -49,7 +49,7 @@
 		<dependency>
 			<groupId>org.openlca</groupId>
 			<artifactId>olca-process-xls</artifactId>
-			<version>2.0.0</version>
+			<version>2.1.1-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
