--- a/olca-app/.classpath
+++ b/olca-app/.classpath
@@ -70,6 +70,7 @@
 	<classpathentry exported="true" kind="lib" path="libs/mimepull-1.9.13.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/npy-0.0.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/olca-core-2.1.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/olca-cs-2.1.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/olca-ecospold-1-2.0.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/olca-ecospold-2-2.0.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/olca-formula-2.0.0.jar"/>
