--- a/olca-app/.classpath
+++ b/olca-app/.classpath
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry exported="true" kind="lib" path="libs/JavaEWAH-1.2.3.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/org.eclipse.jgit-6.8.0.202311291450-r.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/animal-sniffer-annotations-1.21.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/annotations-4.1.1.4.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/aopalliance-repackaged-3.0.1.jar"/>
@@ -46,6 +44,7 @@
 	<classpathentry exported="true" kind="lib" path="libs/jakarta.persistence-api-3.0.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/jakarta.ws.rs-api-3.0.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/jakarta.xml.bind-api-3.0.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/JavaEWAH-1.2.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/javassist-3.25.0-GA.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/javax.annotation-api-1.3.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/jaxb-core-3.0.1.jar"/>
@@ -69,21 +68,22 @@
 	<classpathentry exported="true" kind="lib" path="libs/mariadb-java-client-2.7.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/mimepull-1.9.13.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/npy-0.0.3.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/olca-core-2.1.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/olca-core-2.1.2-SNAPSHOT.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/olca-ecospold-1-2.0.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/olca-ecospold-2-2.0.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/olca-formula-2.0.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/olca-git-2.1.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/olca-git-2.1.2-SNAPSHOT.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/olca-grpc-2.0.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/olca-ilcd-2.0.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/olca-io-2.1.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/olca-ipc-2.1.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/olca-io-2.1.2-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/olca-ipc-2.1.2-SNAPSHOT.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/olca-license-0.0.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/olca-native-0.0.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/olca-process-xls-2.0.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/olca-proto-2.0.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/olca-proto-io-2.1.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/olca-proto-io-2.1.2-SNAPSHOT.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/olca-simapro-csv-3.0.5.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/org.eclipse.jgit-6.8.0.202311291450-r.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/org.eclipse.persistence.asm-9.3.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/org.eclipse.persistence.core-3.0.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/org.eclipse.persistence.jpa.jpql-3.0.3.jar"/>
