--- a/olca-app/pom.xml
+++ b/olca-app/pom.xml
@@ -48,7 +48,7 @@
 
 		<dependency>
 			<groupId>org.openlca</groupId>
-			<artifactId>olca-cs</artifactId>
+			<artifactId>cs-client</artifactId>
 			<version>2.1.0</version>
 		</dependency>
 
