--- a/olca-refdata/pom.xml
+++ b/olca-refdata/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.openlca</groupId>
 	<artifactId>olca-refdata</artifactId>
-	<version>2.1.1</version>
+	<version>2.1.2-SNAPSHOT</version>
 	<name>olca-refdata</name>
 	<description>Project for generating the reference databases</description>
 
